Está ficando bom

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
             </button>
         </div>
     </div>
-    <div>
+    <div class="columum">
+        <div class="head">
+            <p>Gabriel Witte</p>
+            <img src="./src/img/Perfil.jpg" alt="">
+        </div>
         <iframe id="iframe" src="./object/novo.html" frameborder="0"></iframe>
     </div>
     <script src="./src/javascript/script.js"></script>
