--- a/object/configuracao.html
+++ b/object/configuracao.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocumentConfig</title>
+    <link rel="stylesheet" href="./css/confStyle.css">
 </head>
 <body>
     <h1>Configurações</h1>
