--- a/object/novo.html
+++ b/object/novo.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocumentNovo</title>
+    <link rel="stylesheet" href="./css/novoStyle.css">
 </head>
 <body>
-    <h1>Novo lançamento</h1>
+    <div class="head">
+        <h1>Novo lançamento</h1>
+    </div>
+    <div>
+        <p>conteudo</p>
+    </div>
 </body>
 </html>
