--- a/object/transacao.html
+++ b/object/transacao.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocumentTrasacao</title>
+    <link rel="stylesheet" href="./css/transStyle.css">
 </head>
 <body>
     <h1>Trasações</h1>
